--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ components/button/button.html
 sidebarToggle.js
 components/image/image.html
 components/input/input.html
+components/card/card.html
