--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ components/image/image.html
 components/input/input.html
 components/card/card.html
 components/navbar/navbar.html
+components/snackbar/snackbar.html
