--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ components/input/input.html
 components/card/card.html
 components/navbar/navbar.html
 components/snackbar/snackbar.html
+components/list/list.html
